# glTFLoader

./: .gitignore  CMakeLists.txt  README.md
engine/render/: window.cc  window.h
projects/lab5/: CMakeLists.txt
projects/lab5/code/: Camera.cc  Camera.h  GraphicsNode.cc  GraphicsNode.h  LightNode.cc  LightNode.h  Matrix4D.h  ShaderObject.cc  ShaderObject.h  TextureResource.cc  TextureResource.h  Vector4D.h  exampleapp.cc  exampleapp.h  mesh.cc  mesh.h  tiny_gltf.h
projects/lab5/resources/: IcoSphere.json  LightCubeFS.fs  LightingVS.vs  fragmentshader.fs  vertexshader.vs
